# dnd-llm-game

./: .env.example  .gitignore  README.md  docker-compose.yml  package.json  pyproject.toml
backend/dndllm26/api/: routes.py
backend/dndllm26/core/: settings.py
backend/dndllm26/game/: dice.py
backend/dndllm26/jobs/: __init__.py
backend/dndllm26/llm/: ollama_client.py
backend/dndllm26/rag/: store.py
backend/tests/: test_inventory.py  test_llm_integration.py  test_upload.py
dnd-llm-game/: .env.example  README.md  package.json  pyproject.toml
dnd-llm-game/backend/: Dockerfile
dnd-llm-game/backend/dndllm26/: __init__.py  main.py
dnd-llm-game/backend/dndllm26/api/: routes.py
dnd-llm-game/backend/dndllm26/db/: models.py  session.py
dnd-llm-game/backend/dndllm26/game/: __init__.py  service.py
dnd-llm-game/backend/dndllm26/llm/: ollama_client.py
dnd-llm-game/backend/dndllm26/rag/: __init__.py  lore_manager.py  store.py
dnd-llm-game/backend/tests/: test_dice.py  test_lore_manager.py  test_save_load.py
dnd-llm-game/frontend/: package.json
dnd-llm-game/frontend/src/: App.tsx  LoreSelection.test.tsx  Upload.test.tsx
dnd-llm-game/frontend/src/lib/: api.ts  i18n.ts
dnd-llm-game/scripts/: start-dev.ts
frontend/: Dockerfile  index.html  package.json  vite.config.ts
frontend/src/: Inventory.test.tsx
frontend/src/lib/: api.ts
frontend/src/styles/: app.css
scripts/: start-dev.ts
