[project]
name = "dndllm26"
version = "0.1.0"
description = "Local-first LLM D&D web app"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlmodel>=0.0.22",
    "pydantic-settings>=2.7.0",
    "ollama>=0.4.0",
    "lancedb>=0.17.0",
    "pypdf>=5.0.0",
    "python-multipart>=0.0.18",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28.0",
    "pytest>=8.3.0",
    "ruff>=0.8.0",
]

[project.scripts]
dndllm26-api = "dndllm26.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend/dndllm26"]

[tool.ruff]
line-length = 100
target-version = "py311"
